syntax = "proto3";

option java_package = "com.mprribeiro";
option java_multiple_files = true;

package com.mprribeiro;

service ProductService {
  rpc Create(ProductRequest) returns (ProductResponse);
  rpc FindById(RequestById) returns (ProductResponse);
  rpc Delete(RequestById) returns (ProductResponse);
  rpc FindAll(EmptyRequest) returns (ProductResponseList);
}

message ProductRequest {
  string name = 1;
  double price = 2;
  int32 quantity_in_stock = 3;
}

message RequestById {
  int64 id = 1;
}

message EmptyRequest {}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity_in_stock = 4;
}

message ProductResponseList {
  repeated ProductResponse products = 1;
}

